Bug 1588294 - Project search results style tweaks, new highlight colors; r=davidwalsh
- Use tabular numbers in search input message to reduce layout shifts that impact the loader icon
- Use new highlight colors in search results
- Use standard code font-family (platform-dependent) and font-size (11px); change result row height to 18px (from 16px)
- Add row hover background color, similar to Network request list
- And a few more spacing tweaks

Differential Revision: https://phabricator.services.mozilla.com/D49091

UltraBlame original commit: a7cbe630a6ca17817cac909f1d7cbb223d0b5840

--- a/devtools/client/debugger/src/components/ProjectSearch.css
+++ b/devtools/client/debugger/src/components/ProjectSearch.css
@@ -41,7 +41,16 @@ calc
 100
 %
 -
-31px
+var
+(
+-
+-
+editor
+-
+header
+-
+height
+)
 )
 ;
 display
@@ -80,6 +89,54 @@ overflow
 y
 :
 hidden
+;
+-
+-
+search
+-
+result
+-
+background
+-
+hover
+:
+rgba
+(
+209
+232
+255
+0
+.
+8
+)
+;
+}
+.
+theme
+-
+dark
+.
+search
+-
+container
+{
+-
+-
+search
+-
+result
+-
+background
+-
+hover
+:
+rgba
+(
+53
+59
+72
+1
+)
 ;
 }
 .
@@ -134,13 +191,6 @@ cursor
 :
 default
 ;
-padding
-:
-4px
-0
-4px
-5px
-;
 line
 -
 height
@@ -151,47 +201,22 @@ font
 -
 size
 :
-10px
+11px
 ;
-width
-:
-100
-%
-;
-}
-.
-project
--
-text
--
-search
-.
-matches
--
-summary
-{
-margin
--
-left
-:
-5px
-;
-}
-.
-project
--
-text
--
-search
-.
-result
-{
 font
 -
 family
 :
-Menlo
+var
+(
+-
+-
 monospace
+-
+font
+-
+family
+)
 ;
 }
 .
@@ -202,10 +227,10 @@ text
 search
 .
 result
-.
-query
--
-match
+:
+hover
+>
+*
 {
 background
 -
@@ -215,34 +240,14 @@ var
 (
 -
 -
-theme
+search
 -
-selection
+result
 -
 background
-)
-;
-color
-:
-white
-;
-padding
-:
-1px
-4px
-;
-margin
-:
-0
-2px
-0
-2px
-;
-border
 -
-radius
-:
-2px
+hover
+)
 ;
 }
 .
@@ -258,22 +263,38 @@ line
 -
 number
 {
-padding
+grid
 -
-left
+column
 :
-5px
-;
-min
--
-width
-:
-33px
+1
 ;
 width
 :
 100
 %
+;
+padding
+-
+block
+:
+1px
+;
+padding
+-
+inline
+-
+start
+:
+4px
+;
+padding
+-
+inline
+-
+end
+:
+6px
 ;
 text
 -
@@ -281,13 +302,20 @@ align
 :
 end
 ;
-grid
--
-column
+color
 :
-1
-/
-2
+var
+(
+-
+-
+theme
+-
+text
+-
+color
+-
+alt
+)
 ;
 }
 .
@@ -308,14 +336,20 @@ grid
 column
 :
 2
-/
-3
 ;
 padding
 -
-left
+block
 :
-5px
+1px
+;
+padding
+-
+inline
+-
+end
+:
+4px
 ;
 text
 -
@@ -328,6 +362,115 @@ overflow
 x
 :
 hidden
+;
+}
+.
+project
+-
+text
+-
+search
+.
+result
+.
+query
+-
+match
+{
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+contrast
+-
+border
+)
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+color
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+contrast
+-
+background
+)
+;
+}
+.
+project
+-
+text
+-
+search
+.
+result
+.
+focused
+.
+query
+-
+match
+{
+border
+-
+bottom
+:
+none
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 }
 .
@@ -416,35 +559,6 @@ file
 -
 result
 {
-font
--
-weight
-:
-bold
-;
-line
--
-height
-:
-20px
-;
-cursor
-:
-default
-;
-padding
-:
-2px
-0
-2px
-5px
-;
-font
--
-size
-:
-12px
-;
 grid
 -
 column
@@ -452,6 +566,54 @@ column
 1
 /
 3
+;
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+font
+-
+weight
+:
+bold
+;
+cursor
+:
+default
+;
+min
+-
+height
+:
+24px
+;
+padding
+:
+2px
+4px
+;
+font
+-
+size
+:
+12px
+;
+line
+-
+height
+:
+calc
+(
+16
+/
+12
+)
 ;
 }
 .
@@ -465,14 +627,13 @@ file
 -
 result
 .
-arrow
+img
 {
 margin
+-
+inline
 :
 2px
-0
-2px
-0
 ;
 }
 .
@@ -482,21 +643,71 @@ text
 -
 search
 .
-line
+file
 -
-match
+result
+.
+img
+.
+file
+{
+margin
+-
+inline
+-
+end
+:
+4px
+;
+}
+.
+project
+-
+text
+-
+search
+.
+file
+-
+path
+{
+flex
+:
+0
+1
+auto
+;
+white
+-
+space
+:
+normal
+;
+padding
+-
+inline
+-
+end
+:
+4px
+;
+}
+.
+project
+-
+text
+-
+search
+.
+file
+-
+path
+:
+empty
 {
 display
 :
-"
-flex
-"
-;
-flex
--
-grow
-:
-1
+none
 ;
 }
 .
@@ -589,7 +800,11 @@ template
 -
 columns
 :
+minmax
+(
+40px
 auto
+)
 1fr
 ;
 overflow
@@ -597,6 +812,38 @@ overflow
 x
 :
 hidden
+;
+padding
+-
+top
+:
+4px
+;
+}
+.
+project
+-
+text
+-
+search
+.
+tree
+:
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+block
+;
+height
+:
+4px
 ;
 }
 .
@@ -634,30 +881,6 @@ result
 .
 focused
 .
-img
-.
-file
-{
-background
--
-color
-:
-white
-;
-}
-.
-project
--
-text
--
-search
-.
-file
--
-result
-.
-focused
-.
 project
 -
 text
@@ -671,23 +894,6 @@ focused
 line
 -
 value
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
-}
 .
 project
 -
@@ -703,11 +909,18 @@ line
 -
 number
 {
-font
--
-weight
+color
 :
-bolder
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 background
 -
@@ -732,24 +945,18 @@ text
 -
 search
 .
+file
+-
 result
 .
 focused
 .
-query
--
-match
+img
 {
 background
 -
 color
 :
-#
-ffffff
-;
-color
-:
-#
-000000
+currentColor
 ;
 }
