--- a/devtools/client/debugger/src/components/shared/SearchInput.css
+++ b/devtools/client/debugger/src/components/shared/SearchInput.css
@@ -362,7 +362,7 @@ inline
 -
 end
 :
-6px
+4px
 ;
 animation
 :
@@ -590,6 +590,38 @@ color
 alt
 )
 ;
+font
+-
+variant
+-
+numeric
+:
+tabular
+-
+nums
+;
+}
+.
+search
+-
+field
+.
+big
+.
+search
+-
+field
+-
+summary
+{
+margin
+-
+inline
+-
+end
+:
+4px
+;
 }
 .
 search
@@ -729,5 +761,27 @@ inline
 end
 :
 8px
+;
+}
+.
+search
+-
+field
+.
+close
+-
+btn
+:
+:
+-
+moz
+-
+focus
+-
+inner
+{
+border
+:
+none
 ;
 }
